Added backticks for better visualization of docstring

--- a/notebooks/Decision trees.ipynb
+++ b/notebooks/Decision trees.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,10 +148,10 @@
     "                max_thresholds (int): the maximum number of thresholds to use during best split search.\n",
     "                max_features (str / float): the maximum number of features to choose from when determining the best splits\n",
     "                                            (note: they change at each call of \"best_split\"): \n",
-    "                                                - if \"sqrt\", then int(sqrt(n_features)); \n",
-    "                                                - if \"log2\", then int(log2(n_features)):\n",
-    "                                                - if float, then int(n_features * max_features);\n",
-    "                                                - if int, then min(n_features, max_features);\n",
+    "                                                - if \"sqrt\", then `int(sqrt(n_features))`; \n",
+    "                                                - if \"log2\", then `int(log2(n_features))`;\n",
+    "                                                - if float, then `int(n_features * max_features)`;\n",
+    "                                                - if int, then `min(n_features, max_features)`;\n",
     "                                                - if None, all features\n",
     "                random_state (int): random seed.\n",
     "        \"\"\"\n",
@@ -175,7 +175,7 @@
     "\n",
     "    def entropy(self, y):\n",
     "        \"\"\"\n",
-    "            Utility method to compute entropy for a target variable y.\n",
+    "            Utility method to compute entropy for a target variable `y`.\n",
     "\n",
     "            Args:\n",
     "                y (np.ndarray): the target variable.\n",
@@ -194,7 +194,7 @@
     "\n",
     "    def gini(self, y):\n",
     "        \"\"\"\n",
-    "            Utility method to compute Gini impurity for a target variable y.\n",
+    "            Utility method to compute Gini impurity for a target variable `y`.\n",
     "            \n",
     "            Args:\n",
     "                y (np.ndarray): the target variable.\n",
@@ -218,10 +218,10 @@
     "                y (np.ndarray): the target variable.\n",
     "                feature_idx (int): the index of the feature to split on.\n",
     "                threshold (float): the threshold to split the feature on.\n",
-    "                mask (list): list of booleans indicating which parameters to return. Order: [X_left, X_right, y_left, y_right]; if None, all parameters are returned.\n",
+    "                mask (list): list of booleans indicating which parameters to return. Order: `[X_left, X_right, y_left, y_right]`; if None, all parameters are returned.\n",
     "\n",
     "            Returns:\n",
-    "                tuple: contains only the requested parameters based on the mask. Full order is (X_left, X_right, y_left, y_right).\n",
+    "                tuple: contains only the requested parameters based on the mask. Full order is `(X_left, X_right, y_left, y_right)`.\n",
     "        \"\"\"\n",
     "\n",
     "        #As defined in the theory part, the samples with feature values less than or equal to the threshold go to the left child, the rest go to the right child\n",
