--- a/notebooks/Random Forest.ipynb
+++ b/notebooks/Random Forest.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,10 +84,10 @@
     "                    min_impurity_decrease (float): the minimum impurity decrease required to split a node.\n",
     "                    max_thresholds (int): the maximum number of thresholds to use during best split search.\n",
     "                    max_features (str / float): the maximum number of features to choose from in the given ones: \n",
-    "                                                    - if \"sqrt\", then int(sqrt(n_features)); \n",
-    "                                                    - if \"log2\", then int(log2(n_features)):\n",
-    "                                                    - if float, then int(n_features * max_features);\n",
-    "                                                    - if int, then max_features;\n",
+    "                                                    - if \"sqrt\", then `int(sqrt(n_features))`; \n",
+    "                                                    - if \"log2\", then `int(log2(n_features))`;\n",
+    "                                                    - if float, then `int(n_features * max_features)`;\n",
+    "                                                    - if int, then `min(n_features, max_features)`;\n",
     "                                                    - if None, all features\n",
     "                    random_state (int): random seed.\n",
     "        \"\"\"\n",
@@ -135,7 +135,7 @@
     "                            if \"voting\", predicted labels and voting fraction are returned.\n",
     " \n",
     "            Returns:\n",
-    "                labels (np.ndarray): the predicted label of each sample in X.\n",
+    "                labels (np.ndarray): the predicted label of each sample in `X`.\n",
     "                scores (np.ndarray): the score associated to each prediction (see \"type\" attribute).\n",
     "        \"\"\"\n",
     "\n",
