--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
     "                crs_prob (float): crossover probability.\n",
     "                num_crs_points (int): number of crossover points.\n",
     "                model (tuple): the BaseModel to be instantiated to create the individuals of the population along with a dict containing its parameters.\n",
-    "                fit_funct (lambda): the function to be used as fitness with arguments (y_pred, y_true) in this order.\n",
+    "                fit_funct (lambda): the function to be used as fitness with arguments `(y_pred, y_true)` in this order.\n",
     "        \"\"\"\n",
     "\n",
     "        self.min_fit = min_fit\n",
