--- a/notebooks/Naive Bayes.ipynb
+++ b/notebooks/Naive Bayes.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "\n",
     "            Args:\n",
     "                classes (list): the classes the data is classified in.\n",
-    "                                Note: this parameter can be removed and its usages replaced with [0, 1], but since\n",
+    "                                Note: this parameter can be removed and its usages replaced with `[0, 1]`, but since\n",
     "                                NB can be used for multi-class problems, it seems reasonable to us keeping it. \n",
     "        \"\"\"\n",
     "\n",
