--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -570,7 +570,7 @@
     "            return params, history\n",
     "\n",
     "        return callable\n",
-    "    \n",
+    "\n",
     "    def get_prediction(self, X=None, params=None):\n",
     "        \"\"\"\n",
     "        Predicts output values based on the provided input data and model parameters. Applies the defined activation\n",
@@ -617,6 +617,10 @@
     "        :param y: Target labels corresponding to the input features.\n",
     "        :return: the loss function optimization history.\n",
     "        \"\"\"\n",
+    "\n",
+    "        # Set first and last layer size (this is useful for GA)\n",
+    "        self.layers_size[0] = X.shape[1]\n",
+    "        self.layers_size[-1] = 1\n",
     "\n",
     "        # Initialize parameters: weights and biases\n",
     "        self.params = self.initialize_parameters(self.layers_size)\n",
