--- a/notebooks/LogisticRegression.ipynb
+++ b/notebooks/LogisticRegression.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "91050f89",
    "metadata": {
     "ExecuteTime": {
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "class LogisticRegression(BaseModel):\n",
-    "    def __init__(self, num_features=None, optimizer=None):\n",
+    "    def __init__(self, optimizer=None):\n",
     "        \"\"\"\n",
     "        A class representing a logistic regression classifier configuration for specifying the number of features\n",
     "        the classifier has to manage and the optimization algorithm to use during training.\n",
@@ -120,7 +120,6 @@
     "        :type optimizer: dict\n",
     "        \"\"\"\n",
     "\n",
-    "        self.num_features = num_features\n",
     "        self.weights = None\n",
     "        self.bias = None\n",
     "\n",
@@ -147,12 +146,10 @@
     "            :return: Parameters of the logistic regression classifier, specifically weights and biases.\n",
     "        \"\"\"\n",
     "\n",
-    "        self.num_features = num_features\n",
-    "\n",
     "        np.random.seed(0)  # For reproducibility\n",
     "\n",
     "        # Parameters\n",
-    "        weights = np.random.randn(self.num_features, 1)\n",
+    "        weights = np.random.randn(num_features, 1)\n",
     "        bias = 0.\n",
     "\n",
     "        return weights, bias\n",
@@ -350,7 +347,7 @@
     "                history.append(loss(x_train, y_train, weights, bias))\n",
     "            return weights, bias, history\n",
     "        return callable\n",
-    "        \n",
+    "\n",
     "    def fit(self, X=None, y=None):\n",
     "        \"\"\"\n",
     "        Fits the model to the data (X, y) using the optimization algorithm.\n",
@@ -366,7 +363,7 @@
     "        \"\"\"\n",
     "\n",
     "        # Initialize parameters\n",
-    "        self.weights, self.bias  = self.initialize_parameters(self.num_features)\n",
+    "        self.weights, self.bias  = self.initialize_parameters(X.shape[1])\n",
     "\n",
     "        self.weights, self.bias, history = self.optimizer(X, y, self.weights, self.bias)\n",
     "        return history\n",
@@ -408,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "6e03c2571bf11f0a",
    "metadata": {
     "ExecuteTime": {
@@ -452,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "174dba2e",
    "metadata": {
     "ExecuteTime": {
@@ -476,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "4aa088f7624833bd",
    "metadata": {
     "ExecuteTime": {
@@ -491,7 +488,7 @@
        "((227845, 29), (227845, 1), (56962, 29), (56962, 1))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "626c3802ca05deb6",
    "metadata": {
     "ExecuteTime": {
@@ -547,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "2aea9c43bb499f73",
    "metadata": {
     "ExecuteTime": {
@@ -574,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "772dd8889ff81f67",
    "metadata": {
     "ExecuteTime": {
@@ -597,7 +594,6 @@
     "\n",
     "# Logistic Regression classifier\n",
     "lr_classifier = LogisticRegression(\n",
-    "    num_features=X_train_normalized.shape[1],\n",
     "    optimizer=optimizer\n",
     ")"
    ]
@@ -612,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "41054ab50e3d951d",
    "metadata": {
     "ExecuteTime": {
@@ -1627,7 +1623,7 @@
        " ...]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "407577ea334680c",
    "metadata": {
     "ExecuteTime": {
@@ -1664,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "2451c5b0b9c8a641",
    "metadata": {
     "ExecuteTime": {
@@ -1729,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "26caf9281b0a9232",
    "metadata": {
     "ExecuteTime": {
@@ -1744,7 +1740,7 @@
        "((227845, 30), (227845, 1), (56962, 30), (56962, 1))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1757,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "8f7604ec6247dc3f",
    "metadata": {
     "ExecuteTime": {
@@ -1784,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "2e687fcf8a61f5a1",
    "metadata": {
     "ExecuteTime": {
@@ -1803,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "4d12a4be80f11662",
    "metadata": {
     "ExecuteTime": {
@@ -1867,7 +1863,6 @@
     "\n",
     "    # Define Logistic Regression classifier\n",
     "    lr_classifier = LogisticRegression(\n",
-    "        num_features=X_train_curr.shape[1],\n",
     "        optimizer=optimizer\n",
     "    )\n",
     "\n",
@@ -1906,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "b32bbb8aa898e686",
    "metadata": {
     "ExecuteTime": {
@@ -2072,7 +2067,7 @@
        "6  0.831721             232845           [5391.0]  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "a5347efd0006784d",
    "metadata": {
     "ExecuteTime": {
@@ -2249,7 +2244,7 @@
        "6              56962            [101.0]  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2260,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "ebb27651bd9c1e24",
    "metadata": {
     "ExecuteTime": {
