Revert "Merge branch 'ANN-LR-v2'"
This reverts commit 74bcd27fc09187108aa49bb8ff69aba62a495b86, reversing
changes made to d627ead39b194c57f345f9eb73931ea1a58e239d.

--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -153,10 +153,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-=======
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
@@ -164,7 +160,6 @@
      "start_time": "2025-02-20T14:00:22.578522Z"
     }
    },
->>>>>>> ANN-LR-v2
    "outputs": [],
    "source": [
     "class GeneticAlgorithm:\n",
@@ -181,7 +176,7 @@
     "                crs_prob (float): crossover probability.\n",
     "                num_crs_points (int): number of crossover points.\n",
     "                model (tuple): the BaseModel to be instantiated to create the individuals of the population along with a dict containing its parameters.\n",
-    "                fit_funct (lambda): the function to be used as fitness with arguments `(y_pred, y_true)` in this order.\n",
+    "                fit_funct (lambda): the function to be used as fitness with arguments (y_pred, y_true) in this order.\n",
     "        \"\"\"\n",
     "\n",
     "        self.min_fit = min_fit\n",
