Tried to fix bug

--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-20T14:00:22.590824Z",
@@ -356,6 +356,14 @@
     "                #As defined in theory, it inverts the bit\n",
     "                B[i, mut_probs < self.mut_prob] = 1 - B[i, mut_probs < self.mut_prob]\n",
     "\n",
+    "            #If there are individuals with all zeros, we need to replace them with an individual with at least one 1 instead of zero (otherwise the fitness would be 0)\n",
+    "            #This is a common problem in GA, and it is called \"premature convergence\"\n",
+    "            #We can solve it by adding a random number of 1 to the chromosome\n",
+    "            for i in range(self.pop_size):\n",
+    "                if np.sum(B[i]) == 0:\n",
+    "                    num_ones = np.random.choice(range(1, self.num_features))\n",
+    "                    B[i, np.random.choice(range(self.num_features), size = num_ones)] = 1\n",
+    "\n",
     "            #At the end, compute again the fitness of each individual in the population and the maximum fit reached\n",
     "            fits = self.spawn_threads_fitness(B, X_train, y_train, X_test, y_test)\n",
     "            c_max_fit, c_max_fit_id = np.max(fits), np.argmax(fits)\n",
@@ -432,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-20T14:00:30.389156Z",
@@ -447,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-20T14:00:34.505047Z",
@@ -478,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Gaussian Naive Bayes"
+    "#### ***Gaussian Naive Bayes***"
    ]
   },
   {
@@ -535,7 +543,7 @@
    "metadata": {},
    "source": [
     "#### ***Gaussian Naive Bayes***\n",
-    "##### *(with different target fitness threshold and fitness function)*\n"
+    "*(with different target fitness threshold and fitness function)*\n"
    ]
   },
   {
@@ -686,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-20T14:04:48.078317Z",
@@ -700,7 +708,7 @@
        "((230845, 30), (230845, 1), (56962, 30), (56962, 1))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-20T14:04:49.122127Z",
@@ -768,14 +776,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-20T14:05:16.503378Z",
      "start_time": "2025-02-20T14:05:15.901752Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current generation: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Public\\Documents\\Wondershare\\CreatorTemp\\ipykernel_13188\\232883216.py:170: RuntimeWarning: invalid value encountered in divide\n",
+      "  roulette_probs = fits / np.sum(fits)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "probabilities contain NaN",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m X_train_ann, y_train_ann \u001b[38;5;241m=\u001b[39m X_train_normalized, y_train\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Run the GA\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m best_feats_ann, max_fit_ann, feats_hist_ann, fit_hist_ann \u001b[38;5;241m=\u001b[39m \u001b[43mga\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_ann\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train_ann\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test_normalized\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Print the results\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest feature vector: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mga\u001b[38;5;241m.\u001b[39mdecode(best_feats_ann)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, with fitness \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmax_fit_ann\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[4], line 173\u001b[0m, in \u001b[0;36mGeneticAlgorithm.run\u001b[1;34m(self, X_train, y_train, X_test, y_test)\u001b[0m\n\u001b[0;32m    170\u001b[0m roulette_probs \u001b[38;5;241m=\u001b[39m fits \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39msum(fits)\n\u001b[0;32m    172\u001b[0m \u001b[38;5;66;03m#Choose randomly m individuals: by how selection probabilities are defined, individuals with higher fitness should be selected more frequently\u001b[39;00m\n\u001b[1;32m--> 173\u001b[0m ids \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoice\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop_size\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreplace\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mroulette_probs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    175\u001b[0m \u001b[38;5;66;03m#Update the population with the selected individuals\u001b[39;00m\n\u001b[0;32m    176\u001b[0m B \u001b[38;5;241m=\u001b[39m B[ids, :]\n",
+      "File \u001b[1;32mnumpy\\\\random\\\\mtrand.pyx:990\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: probabilities contain NaN"
+     ]
+    }
+   ],
    "source": [
     "# Sets for ANN\n",
     "X_train_ann, y_train_ann = X_train_normalized, y_train\n",
