--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -356,9 +356,8 @@
     "                #As defined in theory, it inverts the bit\n",
     "                B[i, mut_probs < self.mut_prob] = 1 - B[i, mut_probs < self.mut_prob]\n",
     "\n",
-    "            #If there are individuals with all zeros, we need to replace them with an individual with at least one 1 instead of zero (otherwise the fitness would be 0)\n",
+    "            #If there are individuals with all zeros, we need to replace them with an individual with a random number of 1 instead of zero (otherwise the fitness would be 0)\n",
     "            #This is a common problem in GA, and it is called \"premature convergence\"\n",
-    "            #We can solve it by adding a random number of 1 to the chromosome\n",
     "            for i in range(self.pop_size):\n",
     "                if np.sum(B[i]) == 0:\n",
     "                    num_ones = np.random.choice(range(1, self.num_features))\n",
