Change predict function returned values

--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -633,9 +633,10 @@
     "        This is an entry point for the ANN model prediction routine.\n",
     "\n",
     "        :param X: Input features for the model.\n",
-    "        :return: Predicted output values for the input features.\n",
+    "        :return: Predicted labels and probability values for the input features.\n",
     "        \"\"\"\n",
-    "        return self.get_prediction(X, self.params), None"
+    "        y_train_pred = self.get_prediction(X, self.params)\n",
+    "        return y_train_pred >= 0.5, y_train_pred"
    ]
   },
   {
@@ -1900,8 +1901,7 @@
    "outputs": [],
    "source": [
     "# Get testing predicted labels\n",
-    "y_pred, _ = ann.predict(X_test_normalized)\n",
-    "y_fraud_pred = y_pred >= 0.5"
+    "y_pred_labels, y_pred = ann.predict(X_test_normalized)"
    ]
   },
   {
@@ -1940,7 +1940,7 @@
    "source": [
     "metrics = me.compute_metrics(\n",
     "    y_true=y_test,\n",
-    "    y_pred=y_fraud_pred,\n",
+    "    y_pred=y_pred_labels,\n",
     "    metrics_df=None,\n",
     "    dataset_label='v7 training'\n",
     ")\n",
@@ -1950,7 +1950,7 @@
     "print(\"F1 Score:\", metrics[\"f1-score\"][0])\n",
     "print(\"Accuracy:\", metrics[\"accuracy\"][0])\n",
     "\n",
-    "fpr, tpr, auc = me.compute_roc_auc(y_test, y_fraud_pred)\n",
+    "fpr, tpr, auc = me.compute_roc_auc(y_test, y_pred_labels)\n",
     "print(\"AUC Score:\", auc)\n",
     "\n",
     "plt.plot(fpr, tpr)\n",
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "e54817c1",
    "metadata": {
     "ExecuteTime": {
@@ -1986,7 +1986,7 @@
        "((227845, 30), (227845, 1), (56962, 30), (56962, 1))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "bc03423e",
    "metadata": {
     "ExecuteTime": {
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "9f7381b7",
    "metadata": {
     "ExecuteTime": {
@@ -2045,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f10cecc9",
    "metadata": {
     "ExecuteTime": {
@@ -2108,8 +2108,7 @@
     "    ann.fit(X=X_train_curr, y=y_train)\n",
     "    \n",
     "    # Get training predicted labels\n",
-    "    y_train_pred, _ = ann.predict(X_train_curr)\n",
-    "    train_fraud_pred = y_train_pred >= 0.5\n",
+    "    train_fraud_pred, y_train_pred = ann.predict(X_train_curr)\n",
     "\n",
     "    # Save training metrics\n",
     "    metrics_training = me.compute_metrics(\n",
@@ -2124,8 +2123,7 @@
     "    # ...\n",
     "    \n",
     "    # Get testing predicted labels\n",
-    "    y_test_pred, _ = ann.predict(X_test_curr)\n",
-    "    test_fraud_pred = y_test_pred >= 0.5\n",
+    "    test_fraud_pred, y_test_pred = ann.predict(X_test_curr)\n",
     "\n",
     "    # Save testing metrics\n",
     "    metrics_testing = me.compute_metrics(\n",
@@ -2139,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "78ad6fb8708346af",
    "metadata": {
     "ExecuteTime": {
@@ -2305,7 +2303,7 @@
        "6  0.900189             230845           [3391.0]  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2316,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "a8f9f4a0697c19f2",
    "metadata": {
     "ExecuteTime": {
@@ -2482,7 +2480,7 @@
        "6              56962            [101.0]  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "df1e0183",
    "metadata": {
     "ExecuteTime": {
