--- a/notebooks/LogisticRegression.ipynb
+++ b/notebooks/LogisticRegression.ipynb
@@ -389,10 +389,10 @@
     "        This is an entry point for the Logistic Regression classifier prediction routine.\n",
     "\n",
     "        :param X: Input features for the model.\n",
-    "        :return: Predicted output values for the input features.\n",
+    "        :return: Predicted labels and probability values for the input features.\n",
     "        \"\"\"\n",
-    "\n",
-    "        return self.get_prediction(X, self.weights, self.bias), None"
+    "        y_pred = self.get_prediction(X, self.weights, self.bias)\n",
+    "        return y_pred >= 0.5, y_pred"
    ]
   },
   {
@@ -1654,8 +1654,7 @@
    "outputs": [],
    "source": [
     "# Get testing predicted labels\n",
-    "y_pred, _ = lr_classifier.predict(X_test_normalized)\n",
-    "y_fraud_pred = y_pred >= 0.5"
+    "y_fraud_labels, y_pred = lr_classifier.predict(X_test_normalized)"
    ]
   },
   {
@@ -1694,7 +1693,7 @@
    "source": [
     "metrics = me.compute_metrics(\n",
     "    y_true=y_test,\n",
-    "    y_pred=y_fraud_pred,\n",
+    "    y_pred=y_fraud_labels,\n",
     "    metrics_df=None,\n",
     "    dataset_label='v7 training'\n",
     ")\n",
@@ -1704,7 +1703,7 @@
     "print(\"F1 Score:\", metrics[\"f1-score\"][0])\n",
     "print(\"Accuracy:\", metrics[\"accuracy\"][0])\n",
     "\n",
-    "fpr, tpr, auc = me.compute_roc_auc(y_test, y_fraud_pred)\n",
+    "fpr, tpr, auc = me.compute_roc_auc(y_test, y_fraud_labels)\n",
     "print(\"AUC Score:\", auc)\n",
     "\n",
     "plt.plot(fpr, tpr)\n",
@@ -1799,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4d12a4be80f11662",
    "metadata": {
     "ExecuteTime": {
@@ -1870,8 +1869,7 @@
     "    lr_classifier.fit(X=X_train_curr, y=y_train)\n",
     "\n",
     "    # Get training predicted labels\n",
-    "    y_train_pred, _ = lr_classifier.predict(X_train_curr)\n",
-    "    train_fraud_pred = y_train_pred >= 0.5\n",
+    "    train_fraud_pred, y_train_pred = lr_classifier.predict(X_train_curr)\n",
     "\n",
     "    # Save training metrics\n",
     "    metrics_training = me.compute_metrics(\n",
@@ -1886,8 +1884,7 @@
     "    # ...\n",
     "\n",
     "    # Get testing predicted labels\n",
-    "    y_test_pred, _ = lr_classifier.predict(X_test_curr)\n",
-    "    test_fraud_pred = y_test_pred >= 0.5\n",
+    "    test_fraud_pred, y_test_pred = lr_classifier.predict(X_test_curr)\n",
     "\n",
     "    # Save testing metrics\n",
     "    metrics_testing = me.compute_metrics(\n",
